repaired overflow in image

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -28,6 +28,7 @@
     width: 80%;
     padding: 0;
     margin-top: 0;
+    border-radius: 50%;
 }
 
 .intro-pic img {
@@ -46,7 +47,6 @@
     background-size: contain;
     height: auto;
     width: 100%;
-    overflow: visible;
     margin-top: 0;
     }
 
